--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Música</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=Md8wOsMwcUg">
                 <img src="https://www.youtube.com/watch?v=Md8wOsMwcUg" />
