--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=xpJ2VKUHuOI"
+            <iframe width="560" height="315" src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Viol%C3%A3o.jpg"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -31,19 +31,19 @@
         <h2>Música</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=Md8wOsMwcUg">
-                <img src="https://www.youtube.com/watch?v=Md8wOsMwcUg" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Viol%C3%A3o.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=_wXUjRNJeno">
-                <img src="https://www.youtube.com/watch?v=_wXUjRNJeno" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Viol%C3%A3o.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=5jyhdg6-wYY">
-                <img src="https://www.youtube.com/watch?v=5jyhdg6-wYY" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Viol%C3%A3o.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=c5gw69fJUPY">
-                <img src="https://www.youtube.com/watch?v=c5gw69fJUPY" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Viol%C3%A3o.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=sn8PKkxkwLs">
-                <img src="https://www.youtube.com/watch?v=sn8PKkxkwLs" />
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Viol%C3%A3o.jpg" />
             </a>
         </div>
     </section>
